# Research

./: LibreChat_OTEL_Integration_Analysis.md  NETWORK_SCANNER_README.md  direct_scan_demo.py  scanner_example.py  test_scanner_demo.py  wifi_info.py  wifi_metadata_reader.py  wifi_network_scanner.py
APA/: .env.example  Dockerfile  README.md  Readme.md  apa_mcp_server.py  config.py  docker-compose.yml  requirements.txt
Librechat-opik-integration/: .env.example  .env.production.example  ARCHITECTURE.md  CHECKLIST.md  INTEGRATION_SUMMARY.md  README.md  SELF_HOSTED_DEPLOYMENT.md  SELF_HOSTED_README.md  docker-compose.prod.yml  docker-compose.yml  quick-start.sh
mcp/: .env  Dockerfile  config.py  pi_mcp_server.py  requirements.txt  vector_db.py
pi-advisor-mcp/: .env.example  .gitignore  Dockerfile  README.md  bm25_index.py  cache.py  config.py  hybrid_resolver.py  indexing_pipeline.py  knowledge_graph.py  pi_client.py  pi_mcp_server.py  requirements.txt  synonyms.py  vector_db.py
pi-chat/: .gitignore  QUICKSTART.md  README.md
pi-notification-poc/: .gitignore  README.md  quickstart.bat  requirements.txt  test_components.py
vertex_ai_agent/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  QUICKSTART.md  README.md  STATUS.md  agent.py  config.yaml  deploy.sh  enable_apis.py  pyproject.toml  requirements.txt  setup.sh  setup_gcp.py  test_agent.py
vertex_ai_agent/examples/: api_usage.py  example_queries.md
vpn/: FREE_HOSTING.md  IPHONE_SETUP.md  Procfile  QUICKSTART.md  README.md  __init__.py  config_manager.py  deploy_instructions.md  example_usage.py  (+13 more)
(+52 files in other folders)
